--- a/robot/robot.uvprojx
+++ b/robot/robot.uvprojx
@@ -68,9 +68,9 @@
             <nStopU2X>0</nStopU2X>
           </BeforeCompile>
           <BeforeMake>
-            <RunUserProg1>0</RunUserProg1>
+            <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name></UserProg1Name>
+            <UserProg1Name>bash prebuild.sh</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -906,6 +906,11 @@
               <FileName>rtipTraces.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\types\rtipTraces.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>otaMessages.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\generated\clad\robot\clad\robotInterface\otaMessages.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -1935,6 +1940,11 @@
               <FileName>rtipTraces.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\types\rtipTraces.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>otaMessages.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\generated\clad\robot\clad\robotInterface\otaMessages.cpp</FilePath>
             </File>
           </Files>
         </Group>
