--- a/unity/ios/Info.plist
+++ b/unity/ios/Info.plist
@@ -35,6 +35,10 @@
     <string></string>
     <key>UIApplicationExitsOnSuspend</key>
     <false />
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>fetch</string>
+    </array>
     <key>UILaunchImages</key>
     <array>
       <dict>
