--- a/robot/clad/Makefile
+++ b/robot/clad/Makefile
@@ -9,6 +9,7 @@ CLAD_CPP=$(CLAD_EMITTER_DIR)/CPP_emitter.py
 CLAD_CPPLITE=$(CLAD_EMITTER_DIR)/CPPLite_emitter.py
 CLAD_CSHARP=$(CLAD_EMITTER_DIR)/CSharp_emitter.py
 CLAD_PYTHON=$(CLAD_EMITTER_DIR)/Python_emitter.py
+CLAD_CPP_DECL=./cozmo_CPP_declarations_emitter.py
 CLAD_CPP_SWITCH=./cozmo_CPPLite_switch_emitter.py
 CLAD_CPPLITE_SEND_HELPER=./cozmo_CPPLite_send_helper_emitter.py
 
