Cleaning up Espressif / ST merge * Moved face.{h,cpp} into espressif/application * Moved espressif messages.cpp implementation into espressif/application and share messages.h with ST * Fix animationController.cpp Espressif compile. * Makefile adjustments, espressif supervisor now explicitly names files rather than globbing *.cpp

--- a/robot/espressif/app/application/Makefile
+++ b/robot/espressif/app/application/Makefile
@@ -44,7 +44,7 @@ INCLUDES += -I ../../../espressif_bootloader
 INCLUDES += -I ../../../include
 INCLUDES += -I ../../../../tools/anki-util/source/anki
 INCLUDES += -I ../../../generated/clad/robot
-INCLUDES += -I ../../../supervisor/esp_src
+INCLUDES += -I ../../../supervisor/src
 PDIR := ../$(PDIR)
 sinclude $(PDIR)Makefile
 
