Include version.h only where needed, not everywhere so we don't have to rebuild every file every build.

--- a/robot/robot.uvprojx
+++ b/robot/robot.uvprojx
@@ -68,9 +68,9 @@
             <nStopU2X>0</nStopU2X>
           </BeforeCompile>
           <BeforeMake>
-            <RunUserProg1>0</RunUserProg1>
+            <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name></UserProg1Name>
+            <UserProg1Name>.\tools\versionGenerator\versionGenerator.bat include\anki\cozmo\robot\version.h</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -788,6 +788,11 @@
           <GroupName>clad</GroupName>
           <Files>
             <File>
+              <FileName>robotLogging.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\generated\clad\robot\clad\types\robotLogging.cpp</FilePath>
+            </File>
+            <File>
               <FileName>activeObjectTypes.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\types\activeObjectTypes.cpp</FilePath>
@@ -861,11 +866,6 @@
               <FileName>otaMessages.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\robotInterface\otaMessages.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>robotLogging.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\generated\clad\robot\clad\types\robotLogging.cpp</FilePath>
             </File>
           </Files>
         </Group>
@@ -1790,6 +1790,11 @@
           <GroupName>clad</GroupName>
           <Files>
             <File>
+              <FileName>robotLogging.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\generated\clad\robot\clad\types\robotLogging.cpp</FilePath>
+            </File>
+            <File>
               <FileName>activeObjectTypes.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\types\activeObjectTypes.cpp</FilePath>
@@ -1863,11 +1868,6 @@
               <FileName>otaMessages.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\generated\clad\robot\clad\robotInterface\otaMessages.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>robotLogging.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>.\generated\clad\robot\clad\types\robotLogging.cpp</FilePath>
             </File>
           </Files>
         </Group>
