Clean up robot clad helper emitters * Make file is more specified * Switch emitter now has an argument for creating grouped dispatch.  - For Cozmo we emit a switch with anims grouped for the WiFi processor (and pre EP1 robots) and without for the RTIP

--- a/robot/clad/Makefile
+++ b/robot/clad/Makefile
@@ -21,28 +21,48 @@ OUTPUT_CPP=$(patsubst %.clad, %.cpp, $(INPUT_FILES))
 OUTPUT_H=$(patsubst %.clad, %.h, $(INPUT_FILES))
 OUTPUT_H_AND_CPP=$(OUTPUT_H) $(OUTPUT_CPP)
 OUTPUT_PYTHON=$(patsubst %.clad, %.py, $(INPUT_FILES))
+ENGINE_TO_ROBOT_UNION:=./clad/robotInterface/messageEngineToRobot
+ROBOT_TO_ENGINE_UNION:=./clad/robotInterface/messageRobotToEngine
 
 vpath %.clad $(INPUT_DIR)
 vpath %.h $(OUTPUT_DIR)/robot/
 vpath %.cpp $(OUTPUT_DIR)/robot/
+vpath %.def $(OUTPUT_DIR)/robot/
 vpath %.py $(OUTPUT_DIR_PYTHON)/robot/
 
 .PHONY: show clean
 
-all: cpp
+all: cpp $(ENGINE_TO_ROBOT_UNION)_switch.def $(ENGINE_TO_ROBOT_UNION)_switch_group_anim.def $(ENGINE_TO_ROBOT_UNION)_declarations.def $(ROBOT_TO_ENGINE_UNION)_send_helper.h
 
 cpp: $(OUTPUT_H_AND_CPP)
 
 python: $(OUTPUT_PYTHON)
 
-%.h %.cpp : %.clad $(CLAD_DEPENDENCIES) $(CLAD_CPPLITE) $(CLAD_CPP_DECL) $(CLAD_CPP_SWITCH) $(CLAD_CPPLITE_SEND_HELPER)
+%_switch_group_anim.def : %.clad $(CLAD_CPP_SWITCH)
+	if test -f $(OUTPUT_DIR)robot/$*_switch_group_anim.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_switch_group_anim.def; fi
+	$(CLAD_CPP_SWITCH) --group=anim -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
+	chmod -f 555 $(OUTPUT_DIR)robot/$*_switch_group_anim.def
+
+%_switch.def : %.clad $(CLAD_CPP_SWITCH)
+	if test -f $(OUTPUT_DIR)robot/$*_switch.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_switch.def; fi
+	$(CLAD_CPP_SWITCH) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
+	chmod -f 555 $(OUTPUT_DIR)robot/$*_switch.def
+
+%_declarations.def : %.clad $(CLAD_CPP_DECL)
+	if test -f $(OUTPUT_DIR)robot/$*_declarations.def; then chmod -f 777 $(OUTPUT_DIR)robot/$*_declarations.def; fi
+	$(CLAD_CPP_DECL)   -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
+	chmod -f 555 $(OUTPUT_DIR)robot/$*_declarations.def
+
+%_send_helper.h : %.clad $(CLAD_CPPLITE_SEND_HELPER)
+	if test -f $(OUTPUT_DIR)robot/$*_send_helper.h; then chmod -f 777 $(OUTPUT_DIR)robot/$*_send_helper.h; fi
+	$(CLAD_CPPLITE_SEND_HELPER) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)robot/ $*.clad
+	chmod -f 555 $(OUTPUT_DIR)robot/$*_send_helper.h
+
+%.h %.cpp : %.clad $(CLAD_DEPENDENCIES) $(CLAD_CPPLITE)
 	#mkdir -p $(OUTPUT_DIR)/robot/$(dir $<)
 	if test -f $(OUTPUT_DIR)robot/$*.h; then chmod -f 777 $(OUTPUT_DIR)robot/$*.h; fi
 	if test -f $(OUTPUT_DIR)robot/$*.cpp; then chmod -f 777 $(OUTPUT_DIR)robot/$*.cpp; fi
 	$(CLAD_CPPLITE) --max-message-size 1400 -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)/robot/ $*.clad
-	$(CLAD_CPP_DECL)   -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)/robot/ $*.clad
-	$(CLAD_CPP_SWITCH) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)/robot/ $*.clad
-	$(CLAD_CPPLITE_SEND_HELPER) -C $(INPUT_DIR) -I $(INCLUDE_DIRS) -o $(OUTPUT_DIR)/robot/ $*.clad
 	chmod -f 555 $(OUTPUT_DIR)robot/$*.h
 	chmod -f 555 $(OUTPUT_DIR)robot/$*.cpp
 
