--- a/robot/robot.uvprojx
+++ b/robot/robot.uvprojx
@@ -782,6 +782,11 @@
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\proxSensors.cpp</FilePath>
             </File>
+            <File>
+              <FileName>velocityProfileGenerator.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\velocityProfileGenerator.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -896,11 +901,6 @@
               <FileName>utilities_shared.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\coretech\common\shared\src\utilities_shared.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>velocityProfileGenerator.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\coretech\common\shared\src\velocityProfileGenerator.cpp</FilePath>
             </File>
             <File>
               <FileName>memory.cpp</FileName>
@@ -1784,6 +1784,11 @@
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\proxSensors.cpp</FilePath>
             </File>
+            <File>
+              <FileName>velocityProfileGenerator.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\velocityProfileGenerator.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1898,11 +1903,6 @@
               <FileName>utilities_shared.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>..\coretech\common\shared\src\utilities_shared.cpp</FilePath>
-            </File>
-            <File>
-              <FileName>velocityProfileGenerator.cpp</FileName>
-              <FileType>8</FileType>
-              <FilePath>..\coretech\common\shared\src\velocityProfileGenerator.cpp</FilePath>
             </File>
             <File>
               <FileName>memory.cpp</FileName>
