--- a/robot/robot41.uvprojx
+++ b/robot/robot41.uvprojx
@@ -537,6 +537,11 @@
               <FileType>8</FileType>
               <FilePath>.\k02_hal\hal\wifi.cpp</FilePath>
             </File>
+            <File>
+              <FileName>motors.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\k02_hal\hal\motors.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -576,6 +581,21 @@
               <FileName>messages.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\messages.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>liftController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\liftController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>velocityProfileGenerator.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\velocityProfileGenerator.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>radians.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\radians.cpp</FilePath>
             </File>
           </Files>
         </Group>
