Enable cube light controller in EP1.

--- a/robot/robot41.uvprojx
+++ b/robot/robot41.uvprojx
@@ -552,6 +552,11 @@
               <FileType>8</FileType>
               <FilePath>.\k02_hal\hal\battery.cpp</FilePath>
             </File>
+            <File>
+              <FileName>cube.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\k02_hal\hal\cube.cpp</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -636,6 +641,11 @@
               <FileName>ledController.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\ledController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>blockLightController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\blockLightController.cpp</FilePath>
             </File>
           </Files>
         </Group>
