--- a/robot/robot41.uvprojx
+++ b/robot/robot41.uvprojx
@@ -461,51 +461,6 @@
               <FileName>uart.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\k02_hal\hal\uart.cpp</FilePath>
-              <FileOption>
-                <CommonProperty>
-                  <UseCPPCompiler>2</UseCPPCompiler>
-                  <RVCTCodeConst>0</RVCTCodeConst>
-                  <RVCTZI>0</RVCTZI>
-                  <RVCTOtherData>0</RVCTOtherData>
-                  <ModuleSelection>0</ModuleSelection>
-                  <IncludeInBuild>2</IncludeInBuild>
-                  <AlwaysBuild>2</AlwaysBuild>
-                  <GenerateAssemblyFile>2</GenerateAssemblyFile>
-                  <AssembleAssemblyFile>2</AssembleAssemblyFile>
-                  <PublicsOnly>2</PublicsOnly>
-                  <StopOnExitCode>11</StopOnExitCode>
-                  <CustomArgument></CustomArgument>
-                  <IncludeLibraryModules></IncludeLibraryModules>
-                  <ComprImg>1</ComprImg>
-                </CommonProperty>
-                <FileArmAds>
-                  <Cads>
-                    <interw>2</interw>
-                    <Optim>1</Optim>
-                    <oTime>2</oTime>
-                    <SplitLS>2</SplitLS>
-                    <OneElfS>2</OneElfS>
-                    <Strict>2</Strict>
-                    <EnumInt>2</EnumInt>
-                    <PlainCh>2</PlainCh>
-                    <Ropi>2</Ropi>
-                    <Rwpi>2</Rwpi>
-                    <wLevel>2</wLevel>
-                    <uThumb>2</uThumb>
-                    <uSurpInc>2</uSurpInc>
-                    <uC99>2</uC99>
-                    <useXO>2</useXO>
-                    <v6Lang>0</v6Lang>
-                    <v6LangP>0</v6LangP>
-                    <VariousControls>
-                      <MiscControls></MiscControls>
-                      <Define></Define>
-                      <Undefine></Undefine>
-                      <IncludePath></IncludePath>
-                    </VariousControls>
-                  </Cads>
-                </FileArmAds>
-              </FileOption>
             </File>
             <File>
               <FileName>power.cpp</FileName>
@@ -646,6 +601,51 @@
               <FileName>blockLightController.cpp</FileName>
               <FileType>8</FileType>
               <FilePath>.\supervisor\src\blockLightController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>speedController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\speedController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>steeringController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\steeringController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>wheelController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\wheelController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>localization.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\localization.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>dockingController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\dockingController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>pathFollower.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\pathFollower.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>pickAndPlaceController.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\pickAndPlaceController.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>path.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\path.cpp</FilePath>
+            </File>
+            <File>
+              <FileName>localization_geometry.cpp</FileName>
+              <FileType>8</FileType>
+              <FilePath>.\supervisor\src\localization_geometry.cpp</FilePath>
             </File>
           </Files>
         </Group>
